add another flag to try

--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -12,6 +12,7 @@ env:
   CONTAINER: fidesctl-local
   IMAGE: ethyca/fidesctl:local
   DOCKER_BUILDKIT: 1
+  COMPOSE_DOCKER_CLI_BUILD: 1
 
 jobs:
   Build:
