Add a simple page for evaluations

--- a/fidesctl/tests/data/failing_declaration_taxonomy.yml
+++ b/fidesctl/tests/data/failing_declaration_taxonomy.yml
@@ -18,7 +18,7 @@ policy:
     name: Primary Privacy Policy
     description: The main privacy policy for the organization.
     rules:
-      - fides_key: reject_targeted_marketing
+      - name: reject_targeted_marketing
         description: Disallow third party sharing of customer data
         data_categories:
           inclusion: ANY
