--- a/fidesctl/requirements.txt
+++ b/fidesctl/requirements.txt
@@ -1,15 +1,15 @@
 # Loosen these
-alembic==1.6.5
-click==7.1.2
-colorama==0.4.4
-deepdiff==5.5.0
-pandas==1.3.3
-plotly==5.3.1
-pydantic==1.8.2
-PyJWT==2.1.0
-pyyaml==5.4.1
-requests==2.25.1
-sqlalchemy==1.4.14
-SQLAlchemy-Utils==0.37.8
-toml==0.10.2
+alembic==1.6
+click>=7.1.2,<8
+colorama>=0.4.3
+deepdiff==5.5
+pandas==1.3
+plotly==5.3
+pydantic>=1.8.1,<2.0.0 # Required by fastapi
+PyJWT==2
+pyyaml>=5,<6
+requests>=2,<3
+sqlalchemy==1.4
+SQLAlchemy-Utils==0.37
+toml>=0.10.1
 versioneer==0.19
