--- a/docs/fidesops/mkdocs.yml
+++ b/docs/fidesops/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
       - Create Request Policies: guides/policies.md  
       - Configure Data Masking Strategies: guides/masking_strategies.md  
       - Configure Storage Destinations: guides/storage.md
+      - Configure Policy Webhooks: guides/policy_webhooks.md
       - Execute Privacy Requests: guides/privacy_requests.md
       - Report on Privacy Requests: guides/reporting.md
       - Configure OneTrust Integration: guides/onetrust.md  
