--- a/fidesctl/requirements.txt
+++ b/fidesctl/requirements.txt
@@ -2,8 +2,9 @@ alembic==1.6
 click>=7.1.2,<8
 colorama>=0.4.3
 deepdiff==5.5
+loguru>=0.5,<0.6
 pandas==1.3
-plotly==5.3
+plotly==5.4
 pydantic>=1.8.1,<2.0.0 # Required by fastapi
 PyJWT==2
 pyyaml>=5,<6
