Redshift Query Execution [#74] (#131)
* Add foundation to make Redshift access request queries.

* Fix connection config and dataset config tests that look at a new dataset being added.

* Add support for performing redshift erasures.

* Only mask state field in erasure test - contact is too broad, and was preventing the customer record from getting cleaned up.

* Remove unnecessary assertion and access values as attributes of RowProxy not tuples.

* Add Amazon Redshift example to docs.

* Remove breakpoint, argh.

* Use SQLAlchemy TextClause instead of passing in raw string.

* Add request attribute to mask_data and pass into generate_update_stmt.

--- a/.github/workflows/unsafe_pr_checks.yml
+++ b/.github/workflows/unsafe_pr_checks.yml
@@ -17,5 +17,6 @@ jobs:
       - name: Integration Tests (External)
         env:
           REDSHIFT_TEST_URI: ${{ secrets.REDSHIFT_TEST_URI }}
+          REDSHIFT_TEST_DB_SCHEMA: ${{ secrets.REDSHIFT_TEST_DB_SCHEMA }}
           SNOWFLAKE_TEST_URI: ${{ secrets.SNOWFLAKE_TEST_URI }}
         run: make pytest-integration-external
