Remove the `action` field from Policy manifests, add an `OTHER` match type (#291)
* Remove the `action` field from Policy manifests

Also removes all handling of this field, and any relevant documentation.

* Rename `inclusion` --> `matches`

* Add an `OTHER` match type to `MatchesEnum`

* Adhere to the established testing pattern

* updated the fidesctl policy

Co-authored-by: Thomas La Piana <tal103020@icloud.com>

--- a/fidesctl/tests/data/failing_dataset_collection_taxonomy.yml
+++ b/fidesctl/tests/data/failing_dataset_collection_taxonomy.yml
@@ -40,16 +40,15 @@ policy:
       - fides_key: reject_political_opinion
         description: Disallow advertising of customer political opinion data
         data_categories:
-          inclusion: ANY
+          matches: ANY
           values:
             - user.provided.identifiable.political_opinion
         data_uses:
-          inclusion: ANY
+          matches: ANY
           values:
             - advertising
         data_subjects:
-          inclusion: ANY
+          matches: ANY
           values:
             - customer
         data_qualifier: aggregated
-        action: REJECT
