--- a/fidesctl/tests/data/passing_declaration_taxonomy.yml
+++ b/fidesctl/tests/data/passing_declaration_taxonomy.yml
@@ -21,16 +21,15 @@ policy:
       - name: reject_targeted_marketing
         description: Disallow advertising of customer data
         data_categories:
-          inclusion: ANY
+          matches: ANY
           values:
             - user.provided
         data_uses:
-          inclusion: ANY
+          matches: ANY
           values:
             - advertising
         data_subjects:
-          inclusion: ANY
+          matches: ANY
           values:
             - customer
         data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
-        action: REJECT
