store type converter instead of string on field (#130)
Co-authored-by: Steven Benjamin <steven@ethyca.com>

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,6 @@ markers =
     integration_erasure
     integration_external
     integration_mysql
+
+filterwarnings =
+    ignore::DeprecationWarning:aiofiles.*:
