--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -30,7 +30,7 @@ nav:
       - Write a Policy: tutorial/policy.md
       - Add Google Analytics: tutorial/google.md
       - Manage Google Analytics with Fidesctl: tutorial/pass.md
-  - Guides: 
+  - How-To Guides: 
       - Generating a Dataset: guides/generate_dataset.md
       - Scanning a Resource: guides/scan_resource.md
   - CI/CD Reference: ci_reference.md
