Fidesops 78 mssql support (#151)
Co-authored-by: Dawn Pattison <dawn@ethyca.com>
Co-authored-by: catherinesmith <catherine@ethyca.com>
Co-authored-by: Catherine Smith <catherinesmith@Catherines-MacBook-Air.local>

--- a/docker-compose.integration-test.yml
+++ b/docker-compose.integration-test.yml
@@ -4,6 +4,7 @@ services:
       - postgres_example
       - mongodb_example
       - mysql_example
+      - mssql_example
 
   postgres_example:
     image: postgres:12
@@ -50,3 +51,13 @@ services:
       - "3306:3306"
     volumes:
       - ./data/sql/mysql_example.sql:/docker-entrypoint-initdb.d/mysql_example.sql
+
+  mssql_example:
+    image: mcr.microsoft.com/azure-sql-edge:latest # Equivalent to SQL Server 2016
+    ports:
+      - 1433:1433
+    environment:
+      - SA_PASSWORD=Mssql_pw1
+      - ACCEPT_EULA="Y"
+
+
