--- a/requirements.txt
+++ b/requirements.txt
@@ -28,5 +28,6 @@ pymongo==3.12.0
 pandas==1.3.3
 click==7.1.2
 PyMySQL==1.0.2
+pyodbc==4.0.32
 sqlalchemy-redshift==0.8.8
 snowflake-sqlalchemy==1.3.2
