--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -159,3 +159,5 @@ jobs:
 
       - name: Run integration test suite
         run: make pytest-integration
+        env:
+          SNOWFLAKE_FIDESCTL_PASSWORD: ${{ secrets.SNOWFLAKE_FIDESCTL_PASSWORD }}
