--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -159,5 +159,8 @@ jobs:
 
       - name: Run integration test suite
         run: make pytest-integration
+
+      - name: Run external test suite
+        run: make pytest-external
         env:
           SNOWFLAKE_FIDESCTL_PASSWORD: ${{ secrets.SNOWFLAKE_FIDESCTL_PASSWORD }}
