Add extended data_uses for discussion

--- a/fidesctl/demo_resources/demo_system.yml
+++ b/fidesctl/demo_resources/demo_system.yml
@@ -24,7 +24,20 @@ system:
         data_categories:
           #- user.provided.identifiable.contact # uncomment to add this category to the system
           - user.derived.identifiable.device.cookie_id
-        data_use: advertising
+        data_use: third_party_sharing.personalized_advertising.marketing_co
         data_subjects:
           - customer
+        data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+
+  - fides_key: demo_payroll_system
+    name: Demo Payroll System
+    description: Handle all required payroll data for the company
+    system_type: Service # is this documented somewhere currently?
+    privacy_declarations:
+      - name: Handle payroll activities
+        data_categories:
+          - user.provided.identifiable.financial
+        data_use: third_party_sharing.legal_obligation.hmrc
+        data_subjects:
+          - employee
         data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
