--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -33,7 +33,7 @@ nav:
   - How-To Guides:
       - Generating a Dataset: guides/generate_dataset.md
       - Scanning a Resource: guides/scan_resource.md
-      - Writing Policies: guides/policies.md
+      - Example Policies: guides/policies.md
   - CI/CD Reference: ci_reference.md
   - Fides Language:
       - Overview: language/overview.md
