[Testing Improvements] Update `Makefile` and `docker-compose.integration-<env>` files to enable testing one integration env at a time (#148)
* adds comment

* test

* remove arbitrary comment

* remove pr_checks

* replace composite dockerfile with all integration envs with separate file

* reconfigure pytest marks

* update markers

* add markers to config file

* update mongodb file naming

* add new Make command

* adds missing semi-colon in python setup logic

* rename mssql_setup.py so that bash can address it

* use dash in targetted envs

* remove old mssql_setup file

* add pytest-integration job to CI

* add back erasure tests

* remove unused access check

* add markers for redshift and snowflaek

* use new redshift and snowflake markers

* setup erasure tests in the same way

* add compatibility to integration-env and integration-shell commands

* remove duplicate marks

* use python file to dispatch tests

* add run_application and open_shell

* invoke configure_infrastructure from make integration-shell and integration-env

* don't try to run setup for external datastores yet

* fix var parsing when only one is supplied

* fix text invokation

* use argparse

* set config file back to underscore naming

* update calling interface in Makefile

* break file into smaller functions

* add pytest_path to command

* add quickstart

* use integration marker if all datastores are present

* update docs

* adds support for environment variables

* rename command

* add docstrings

* refactor test markers

* deduplicate datastores list

* only use necessary datastores in the quickstart

* update marks

* consolidate marks

* remove unused code

--- a/.github/workflows/safe_pr_checks.yml
+++ b/.github/workflows/safe_pr_checks.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Unit Tests
         run: make pytest
 
-      - name: Integration Tests (Access)
-        run: make pytest-integration-access
+      - name: Integration Tests
+        run: make pytest-integration
 
       - name: Integration Tests (Erasure)
         run: make pytest-integration-erasure
