--- a/pytest.ini
+++ b/pytest.ini
@@ -7,6 +7,11 @@ markers =
     integration_erasure
     integration_external
     integration_mysql
+    integration_postgres
+    integration_mongodb
+    integration_mssql
+    integration_redshift
+    integration_snowflake
 
 filterwarnings =
     ignore::DeprecationWarning:aiofiles.*:
