--- a/fidesctl/.fides/dataset.yml
+++ b/fidesctl/.fides/dataset.yml
@@ -123,6 +123,11 @@ dataset:
 
           - name: organization_fides_key
             description: "Fides Generated Description for Column: organization_fides_key"
+          
+          - name: joint_controller
+            description: "Encrypted contact information for a joint controller (name, address, email, phone)"
+            data_categories:
+            - user.provided.identifiable.contact
 
       - name: public.evaluations
         description: "Fides Generated Description for Table: public.evaluations"
@@ -162,6 +167,21 @@ dataset:
 
           - name: organiztion_parent_key
             description: "Fides Generated Description for Column: organiztion_parent_key"
+
+          - name: controller
+            description: "Encrypted contact information for the controller (name, address, email, phone)"
+            data_categories:
+            - user.provided.identifiable.contact
+
+          - name: data_protection_officer
+            description: "Encrypted contact information for the Data Protection Officer (name, address, email, phone)"
+            data_categories:
+            - user.provided.identifiable.contact
+
+          - name: representative
+            description: "Encrypted contact information for the representative (name, address, email, phone)"
+            data_categories:
+            - user.provided.identifiable.contact
 
       - name: public.policies
         description: "Fides Generated Description for Table: public.policies"
@@ -237,3 +257,8 @@ dataset:
 
           - name: system_type
             description: "Fides Generated Description for Column: system_type"
+
+          - name: joint_controller
+            description: "Encrypted contact information for a joint controller (name, address, email, phone)"
+            data_categories:
+            - user.provided.identifiable.contact
