--- a/fidesctl/.fides/policy.yml
+++ b/fidesctl/.fides/policy.yml
@@ -18,3 +18,24 @@ policy:
           values:
             - anonymous_user
         data_qualifier: aggregated
+  - fides_key: data_sharing_policy
+    name: Data Sharing
+    description: The privacy policy that governs sharing of data with third parties.
+    rules:
+      - name: Disallow Third-Party Marketing
+        description: Disallow collecting any user contact info to use for marketing.
+        data_categories:
+          matches: ANY # If any of these data categories are being used
+          values:
+            - account
+            - user
+        data_uses:
+          matches: ANY # And the use of the data is for third-party sharing
+          values:
+            - third_party_sharing
+        data_subjects:
+          matches: ANY # And the data subject is a customer
+          values:
+            - customer
+        # And the data is identifiable, trigger a violation
+        data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
