--- a/fidesctl/demo_resources/demo_dataset.yml
+++ b/fidesctl/demo_resources/demo_dataset.yml
@@ -7,6 +7,7 @@ dataset:
   data_categories: []
   data_qualifiers:
   - aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+  retention: "30 days after account deletion"
   collections:
   - name: users
     description: User information
