Adds connection config for mariadb (#186)
* adds connection config for mariadb

* typo

* lint

* extract sql that inserts data into python fixtures, add test

* fix import

* unneeded import

* move fixture to appropriate place

--- a/fidesops-integration.toml
+++ b/fidesops-integration.toml
@@ -33,3 +33,9 @@ PASSWORD="Mssql_pw1"
 DB="mssql_example"
 PORT=1433
 
+[mariadb_example]
+SERVER="mariadb_example"
+USER="mariadb_user"
+PASSWORD="mariadb_pw"
+DB="mariadb_example"
+PORT=3306
