--- a/pytest.ini
+++ b/pytest.ini
@@ -12,6 +12,7 @@ markers =
     integration_mssql
     integration_redshift
     integration_snowflake
+    integration_mariadb
 
 filterwarnings =
     ignore::DeprecationWarning:aiofiles.*:
